# asvt-chat-exam

./: .gitmodules  Cargo.toml  client_sync.c  docs.txt  poll.c  zz.txt
clients/: client_tatarbaeva.c
pi_server/: Cargo.toml  cargo_musl.sh  client_sync.c  docs.txt
pi_server/src/: api.rs  client.rs  db.rs  error.rs  main.rs  protocol.rs  utils.rs
src/: api.rs  client.rs  config.rs  db.rs  error.rs  main.rs  protocol.rs  utils.rs
