[package]
name = "pi_server"
version = "0.3.7"
authors = ["plazmoid <kronos44@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "*"
log = "*"
simplelog = "*"
nom = { version = "6.0.1", features = ["alloc"] }
lazy_static = "*"
thiserror = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
uuid = { version = "*", features = ["v4", "serde"] }
chrono = { version = "*", features = ["unstable-locales"] }
regex = "*"